Ju Hun Lee> Class StudentManager bug fix: Method invokes inefficient Number constructor